--- a/src/app/components/connection/edit-connection/edit-connection.component.html
+++ b/src/app/components/connection/edit-connection/edit-connection.component.html
@@ -101,6 +101,9 @@
       <button type="button" (click)="testUpdateAPI()" class="btn btn-warning me-2">
         <i class="bi bi-wrench"></i> Test API
       </button>
+      <button type="button" (click)="testLogCreation()" class="btn btn-success me-2">
+        <i class="bi bi-journal-plus"></i> Test Log
+      </button>
       @if (!this.form.valid) {
       <div class="invalid-feedback">Form is invalid</div>
       }
