--- a/src/app/components/floors/edit-floor/edit-floor.component.html
+++ b/src/app/components/floors/edit-floor/edit-floor.component.html
@@ -134,7 +134,7 @@
                 <div class="col">
                   <div class="form-group mb-3">
                     <label [for]="'xPos' + i" class="form-label">X position</label>
-                    <input type="text" formControlName="xPos" [id]="'xPos' + i" required [ngClass]="{
+                    <input type="number" formControlName="xPos" [id]="'xPos' + i" required [ngClass]="{
                         'is-invalid': dimensionForm.get('xPos')?.invalid && (dimensionForm.get('xPos')?.dirty || dimensionForm.get('xPos')?.touched),
                         'is-valid': dimensionForm.get('xPos')?.valid && (dimensionForm.get('xPos')?.dirty || dimensionForm.get('xPos')?.touched),
                         'form-control': true
@@ -152,7 +152,7 @@
                 <div class="col">
                   <div class="form-group mb-3">
                     <label [for]="'yPos' + i" class="form-label">Y position</label>
-                    <input type="text" formControlName="yPos" [id]="'yPos' + i" required [ngClass]="{
+                    <input type="number" formControlName="yPos" [id]="'yPos' + i" required [ngClass]="{
                         'is-invalid': dimensionForm.get('yPos')?.invalid && (dimensionForm.get('yPos')?.dirty || dimensionForm.get('yPos')?.touched),
                         'is-valid': dimensionForm.get('yPos')?.valid && (dimensionForm.get('yPos')?.dirty || dimensionForm.get('yPos')?.touched),
                         'form-control': true,
@@ -170,7 +170,7 @@
                 <div class="col">
                   <div class="form-group mb-3">
                     <label [for]="'hPos' + i" class="form-label">H position</label>
-                    <input type="text" formControlName="hPos" [id]="'hPos' + i" required [ngClass]="{
+                    <input type="number" formControlName="hPos" [id]="'hPos' + i" required [ngClass]="{
                         'is-invalid': dimensionForm.get('hPos')?.invalid && (dimensionForm.get('hPos')?.dirty || dimensionForm.get('hPos')?.touched),
                         'is-valid': dimensionForm.get('hPos')?.valid && (dimensionForm.get('hPos')?.dirty || dimensionForm.get('hPos')?.touched),
                         'form-control': true,
@@ -190,7 +190,7 @@
                 <div class="col">
                   <div class="form-group mb-3">
                     <label [for]="'x' + i" class="form-label">X</label>
-                    <input type="text" formControlName="x" [id]="'x' + i" required [ngClass]="{
+                    <input type="number" formControlName="x" [id]="'x' + i" required [ngClass]="{
                         'is-invalid': dimensionForm.get('x')?.invalid && (dimensionForm.get('x')?.dirty || dimensionForm.get('x')?.touched),
                         'is-valid': dimensionForm.get('x')?.valid && (dimensionForm.get('x')?.dirty || dimensionForm.get('x')?.touched),
                         'form-control': true,
@@ -206,7 +206,7 @@
                 <div class="col">
                   <div class="form-group mb-3">
                     <label [for]="'y' + i" class="form-label">Y</label>
-                    <input type="text" formControlName="y" [id]="'y' + i" required [ngClass]="{
+                    <input type="number" formControlName="y" [id]="'y' + i" required [ngClass]="{
                         'is-invalid': dimensionForm.get('y')?.invalid && (dimensionForm.get('y')?.dirty || dimensionForm.get('y')?.touched),
                         'is-valid': dimensionForm.get('y')?.valid && (dimensionForm.get('y')?.dirty || dimensionForm.get('y')?.touched),
                         'form-control': true,
@@ -222,7 +222,7 @@
                 <div class="col">
                   <div class="form-group mb-3">
                     <label [for]="'h' + i" class="form-label">H</label>
-                    <input type="text" formControlName="h" [id]="'h' + i" required [ngClass]="{
+                    <input type="number" formControlName="h" [id]="'h' + i" required [ngClass]="{
                         'is-invalid': dimensionForm.get('h')?.invalid && (dimensionForm.get('h')?.dirty || dimensionForm.get('h')?.touched),
                         'is-valid': dimensionForm.get('h')?.valid && (dimensionForm.get('h')?.dirty || dimensionForm.get('h')?.touched),
                         'form-control': true,
